Fix fixed header link target overlap

--- a/css/main.css
+++ b/css/main.css
@@ -555,14 +555,41 @@ html {
   .header-bar {
     position: fixed;
     width: 100vw;
+    z-index: 1;
+  }
+
+  .hero-image {
+    z-index: 2;
+  }
+
+  .mobile-btn {
+    background-color: transparent;
+    position: fixed;
   }
 
   header {
     padding-bottom: 60px;
   }
+
+  #projects,
+#contact {
+    padding-top: 60px;
+    margin-top: -60px;
+  }
+
+  #about,
+#coding,
+#scs {
+    padding-top: 90px;
+    margin-top: -60px;
+  }
 }
 @media screen and (min-width: 768px) {
   .mobile-btn {
+    display: none;
+  }
+
+  .home-bar {
     display: none;
   }
 
